// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Visualizations -> Table -> Columns -> Boolean Editor Changes value for FALSE 1`] = `
Object {
  "booleanValues": Array [
    "no",
    "true",
  ],
}
`;

exports[`Visualizations -> Table -> Columns -> Boolean Editor Changes value for TRUE 1`] = `
Object {
  "booleanValues": Array [
    "false",
    "yes",
  ],
}
`;
